<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_somar"
        android:layout_width="147dp"
        android:layout_height="76dp"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="31dp"
        android:text="@string/somar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_dividir"
        android:layout_width="147dp"
        android:layout_height="76dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="31dp"
        android:text="@string/dividir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_subitrair"
        android:layout_width="147dp"
        android:layout_height="76dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="53dp"
        android:text="@string/subitrair"
        app:layout_constraintBottom_toTopOf="@+id/btn_dividir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

    <Button
        android:id="@+id/btn_multiplicar"
        android:layout_width="147dp"
        android:layout_height="76dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="44dp"
        android:text="@string/multiplicar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="248dp"
        android:layout_height="72dp"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="161dp"
        android:text="@string/resultado"
        app:layout_constraintBottom_toTopOf="@+id/btn_somar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/valor2"
        android:layout_width="356dp"
        android:layout_height="61dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="97dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/valor2" />

    <EditText
        android:id="@+id/valor1"
        android:layout_width="356dp"
        android:layout_height="61dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/valor2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="20dp"
        android:text="Valor 2"
        app:layout_constraintBottom_toTopOf="@+id/valor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="195dp"
        android:text="Valor 1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>